# rekordbox-edit

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/actions/test/: action.yml
.github/workflows/: cd.yml  ci.yml  publish.yml
rekordbox_edit/: _click.py  cli.py  logger.py  query.py  utils.py
rekordbox_edit/commands/: __init__.py  convert.py  search.py
tests/: test_logger.py  test_query.py  test_utils.py
tests/commands/: test_convert.py  test_search.py
